inicio diagramacion html, solo se avanzo en el header con publicidad

--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,38 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<header>
+		<div class="container-fluid bg-gray">
+			<div class="row">
+				<div class="col-md-10">
+					<img src="image/banner_top.jpg" class="banner-top">
+					<ul>
+						<li><a href="http://www.libero.pe/">LIBERO.PE</a></li>
+						<li><a href="http://www.elpopular.pe">ELPOPULAR.PE</a></li>
+						<li><a href="http://fundacionmohme.org/">FUNDACIÓN GUSTAVO MOHME LLONA</a></li>
+					</ul>
+					<button class="btn">SUSCRIBETE AL BOLETIN</button>
+					<span class="fa fa-facebook"></span>
+					<span class="fa fa-twitter"></span>
+					<span class="fa fa-gooogle-plus"></span>
+					<span class="fa fa-envelope"></span>
+					<span class="fa fa-rss"></span>
+					<span class="sep"></span>
+					<button class="search"></button>
+					<span class="sep"></span>
+
+				</div>
+			</div>
+			<div class="row">
+				<img src="image/logo-la-republica.jpg" class="logo">
+				<div class="domingo"></div>
+				<div class="editorial">
+					<img src="image/img_editorial_text.jpg" height="48" width="14" alt="">
+				</div>
+			</div>
+		</div>
+	</header>
+
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<script src="js/slick.min.js"></script>
