blog diagramacion lista, falta detalles, de alineacion y espaciado

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,221 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-		<footer>
+	<header>
+	<!--sigrid -->
+	</header>
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
+				<div class="publicidad pull-left col-md-2">
+					<img src="image/sponsor_left.jpg">
+				</div>
+			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
+				<div class="col-md-12 mt-3">
+					<div class="titulos">
+						<h1 class="title">Blog</h1>
+						<h4 class="subtitle">LO MEJOR EN BLOGS <img src="image/double-arrow-bottom.png"> </h4>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Y tú... ¿Ya hiciste click?</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Moda Ente Tendente</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">El Gol de la muerte</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_01.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">LIBROS</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">Dios ha muerto... tengo las manos cubiertas de sangre</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_02.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Educando con Amor Firme</h6>
+						</div>
+					</div>
+					<div class="blog col-md-5">
+						<p>Lunes, 14 de julio de 2015</p>
+						<h4 class="mb-2 title">¿Cuál es tu queso favorito?</h4>
+						<div class="bg-gray">
+							<img class="pull-left" src="image/blog_avatar_03.jpg">
+							<h5 class="title">BLOG</h5>
+							<h6 class="subtitle">Décimas Cosas</h6>
+						</div>
+					</div>
+				</div>
+			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
+				<div class="publicidad pull-right col-md-2">
+					<img src="image/sponsor_right.jpg">
+				</div>
+			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
+			</div>
+		</div>
+	</section>
+	<footer>
 		<div class="container-fluid bg-gray">
 			<div class="container">
 				<div class="row">
