cambios en siderbar

--- a/index.html
+++ b/index.html
@@ -9,7 +9,153 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	
+	<section>
+		<div class="container-fluid">
+			<div class="row">
+			<!--S I D E B A R - I N D E X -->
+				<div class="col-md-4">
+					
+				</div>
+			<!--S I D E B A R - I N D E X -->
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container-fluid bg-gray">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 logo-footer">
+						<img src="image/logo-grupo-la-republica.png">
+						<h4 class="txblack">Grupo La República Digital</h4>
+						<p>Jr.Canamá 320 Cercado de Lima</p>
+						<p>Teléfono:711-6000</p>
+						<p>(Central Telefónica)</p>
+						<p class="derechos">Todos los derechos reservados - 2015</p>
+					</div>
+					<div class="col-md-3 sep-footer lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="container">
+				<div class="row">
+					<div class="lista-diarios">
+						<ul>
+							<li><span class="sep">Diarios del PAL: Clarín</span></li>
+							<li><span class="sep">La Tercera</span></li>
+							<li><span class="sep">El Universal Colombia</span></li>
+							<li><span class="sep">El Universal Venezuela</span></li>
+							<li><span class="sep">Vanguardia</span></li>
+							<li><span class="sep">La Prensa</span></li>
+							<li><span class="sep">El Salvador</span></li>
+							<li><span class="sep">La Verdad</span></li>
+							<li><span class="sep">Diario Libre</span></li> 
+							<li><span class="sep">El diario de hoy  El </span></li>
+							<li>Colombiano</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
 	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<script src="js/slick.min.js"></script>
