--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		<section class="header">
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-2">
-					<img src="image/logo-la-republica.jpg" alt="">
+					<img class="logo" src="image/logo-la-republica.jpg" alt="">
 				</div>
 				<div class="col-lg-6 col-lg-offset-2">
 					<img class="floatRight" src="image/sideLogo.JPG" alt="">
@@ -51,19 +51,17 @@
 		<nav>
 			<div class="row">
 				<div class="col-lg-12 col-lg-offset-2">
-					<div class="btn-group" role="group" aria-label="...">
-						<button type="button" class="btn">Política</button>
-						<button type="button" class="btn">Economía</button>
-						<button type="button" class="btn">Sociedad</button>
-						<button type="button" class="btn">Elecc. Regionales</button>
-						<button type="button" class="btn">Deportes</button>
-						<button type="button" class="btn">Champions L.</button>
-						<button type="button" class="btn">Espectáculos</button>
-						<button type="button" class="btn">Ed. Impresa</button>
-						<button type="button" class="btn">Regionales</button>
-						<button class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Más secciones <span class="caret"></span>
-						</button>
+					<ul class="list-inline center">
+						<li><a href="">POLÍTICA</a></li>
+						<li><a href="">ECONOMÍA</a></li>
+						<li><a href="">SOCIEDAD</a></li>
+						<li><a href="">ELECC. REGIONALES</a></li>
+						<li><a href="">DEPORTES</a></li>
+						<li><a href="">CHAMPIONS L.</a></li>
+						<li><a href="">ESPECTÁCULOS</a></li>
+						<li><a href="">ED. IMPRESA</a></li>
+						<li><a href="">REGIONALES</a></li>
+						<li class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a href="">MÁS SECCIONES <span class="caret"></span></a></li>
 						<ul class="dropdown-menu">
 							<li><a href="#">Action</a></li>
 							<li><a href="#">Another action</a></li>
@@ -71,7 +69,7 @@
 							<li role="separator" class="divider"></li>
 							<li><a href="#">Separated link</a></li>
 						</ul>	
-					</div>
+					</ul>
 				</div>
 			</div>
 		</nav>
@@ -256,7 +254,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center floatLeft bottomList">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -280,7 +278,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -300,7 +298,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -323,7 +321,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -343,7 +341,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -367,7 +365,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -387,7 +385,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -410,7 +408,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -430,7 +428,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -454,7 +452,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -474,7 +472,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -497,7 +495,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -517,7 +515,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -541,7 +539,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -561,7 +559,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -584,7 +582,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -604,7 +602,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -628,7 +626,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -648,7 +646,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -671,7 +669,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -691,7 +689,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -715,7 +713,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -735,7 +733,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -758,7 +756,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -778,7 +776,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -802,7 +800,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -822,7 +820,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -845,7 +843,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -865,7 +863,7 @@
 					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
 					<img class="floatLeft" src="image/img_news.jpg" alt="">
 					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -889,7 +887,7 @@
 					<img class="floatLeft" src="image/Roque.JPG" alt="">
 					<p>Zenaida Condori Contreras - Arequipa. <br>
 						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -909,7 +907,7 @@
 					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
 					<img class="floatLeft" src="image/perro.JPG" alt="">
 					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
@@ -932,7 +930,7 @@
 					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
 					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
 					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
-					<ul class="list-inline">
+					<ul class="list-inline floatLeft bottomList center">
 						<li>
 							<a href=""><i class="fa fa-facebook"></i></a>
 							<a href=""><i class="fa fa-twitter"></i></a>
