--- a/blog.html
+++ b/blog.html
@@ -64,11 +64,9 @@
 							<li class="dropdown"> 
 								<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MÁS SECCIONES<span class="caret"></span></a> 
 								<ul class="dropdown-menu"> 
-									<li><a href="#">Action</a></li> 
-									<li><a href="#">Another action</a></li> 
-									<li><a href="#">Something else here</a></li> 
-									<li role="separator" class="divider"></li> 
-									<li><a href="#">Separated link</a></li> 
+									<li><a href="columnistas.html">Columnistas</a></li>
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="contacto.html">Contacto</a></li> 
 								</ul> 
 							</li>
 						</ul>
@@ -424,8 +422,8 @@
 			</div>
 		</div>
 	</footer>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script type="text/javascript">
 		$('.multiple-items').slick({
