--- a/contacto.html
+++ b/contacto.html
@@ -63,11 +63,9 @@
 						<li><a href="">REGIONALES</a></li>
 						<li class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a href="">MÁS SECCIONES <span class="caret"></span></a></li>
 						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
+							<li><a href="columnistas.html">Columnistas</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 						</ul>	
 					</ul>
 				</div>
@@ -272,8 +270,8 @@
 			</div>
 		</div>
 	</footer>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script src="js/slick.min.js"></script>
 	<script>
 		$(document).ready(function() {
