--- a/index.html
+++ b/index.html
@@ -63,11 +63,9 @@
 						<li><a href="">REGIONALES</a></li>
 						<li class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a href="">MÁS SECCIONES <span class="caret"></span></a></li>
 						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
+							<li><a href="columnistas.html">Columnistas</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="contacto.html">Contacto</a></li>
 						</ul>	
 					</ul>
 				</div>
@@ -948,7 +946,6 @@
 		<!--Contenido infinito-->
 			</div>
 			<div class="col-lg-4 pull-right">
-				<img src="image/banner-aside-home.jpg">
 				<div class="suscribe bg-sidebar">
 					<div class="bg-white">
 						<img class="mail" src="image/img_sucribe.png" >
@@ -958,21 +955,21 @@
 					</div>
 				</div>
 				<div class="aweite">
-					<img src="image/logo_aweita.jpg">
+					<img class="img-sidebar" src="image/logo_aweita.jpg">
 					<div class="noticia">
-						<img src="image/img_aweita.jpg" alt="">
+						<img class="img-sidebar" src="image/img_aweita.jpg" alt="">
 					 	<p>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</p>
 					</div>
 					<div class="noticia">
-					 	<img src="image/img_aweita.jpg">
+					 	<img class="img-sidebar" src="image/img_aweita.jpg">
 					 	<p>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</p>
 					</div>
 					<div class="noticia">
-						<img src="image/img_aweita.jpg" alt="">
+						<img class="img-sidebar" src="image/img_aweita.jpg" alt="">
 					 	<p>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</p>
 					</div>
 					<div class="noticia">
-					 	<img src="image/img_aweita.jpg">
+					 	<img class="img-sidebar" src="image/img_aweita.jpg">
 					 	<p>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</p>
 					</div>
 					</div>
@@ -1117,10 +1114,9 @@
 		</div>
 	</footer>
 </div>
-	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 	<script src="js/slick.min.js"></script>
-
 	<script type="text/javascript">
 		$('.multiple-items').slick({
 			dots:false,
