cambios en sidebar index

--- a/index.html
+++ b/index.html
@@ -945,33 +945,42 @@
 				</div>
 		<!--Contenido infinito-->
 			</div>
-			<div class="col-lg-4 pull-right">
+			<div class="col-lg-4">
 				<div class="suscribe bg-sidebar">
 					<div class="bg-white">
 						<img class="mail" src="image/img_sucribe.png" >
 					 	<h3><b>Suscríbete</b> a nuestro boletín</h3>
 					 	<input class="enter-mail" type="text">
-					 	<button class="btn" type="submit">Suscribirse</button>
+					 	<button class="btn-suscribe" type="submit">Suscribirse</button>
 					</div>
 				</div>
-				<div class="aweite">
-					<img class="img-sidebar" src="image/logo_aweita.jpg">
+				<div class="aweita">
+					<img class="img-sidebar logoaweita" src="image/logo_aweita.jpg">
 					<div class="noticia">
-						<img class="img-sidebar" src="image/img_aweita.jpg" alt="">
-					 	<p>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</p>
+						<img class="pull-left img-sidebar" src="image/img_aweita.jpg">
+					 	<p><b>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</b></p>
 					</div>
 					<div class="noticia">
-					 	<img class="img-sidebar" src="image/img_aweita.jpg">
-					 	<p>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</p>
+					 	<img class="pull-left img-sidebar" src="image/lewis_carroll.png">
+					 	<p><b>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</b></p>
 					</div>
 					<div class="noticia">
-						<img class="img-sidebar" src="image/img_aweita.jpg" alt="">
-					 	<p>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</p>
+						<img class="pull-left img-sidebar" src="image/img_aweita.jpg">
+					 	<p><b>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</b></p>
 					</div>
 					<div class="noticia">
-					 	<img class="img-sidebar" src="image/img_aweita.jpg">
-					 	<p>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</p>
+					 	<img class="pull-left img-sidebar" src="image/lewis_carroll.png">
+					 	<p><b>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</b></p>
 					</div>
+					<h5 class="center">Más en <a class="link-aweita" href="http://www.aweita.pe">Awita.pe</a></h5>
+					<hr class="barra">
+					</div>
+				</div>
+				<div class="fotos-dest">
+					<div class="foto-big">
+						<div class="titlephots">FOTOS DESTACADAS</div>
+						<img class="img-sidebar" src="image/img_fotodes_prominent.jpg">
+						<p>Líneas de Nasca: admiten prisión preventiva de 6 meses para activista de Greenpeace <span class="sep"></span> FOTOS</p>
 					</div>
 				</div>
 			</div>
