Index y Columnistas listo

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 						<i class="fa fa-google-plus"></i>
 						<i class="fa fa-envelope"></i>
 						<i class="fa fa-rss"></i>
+						<div>
+							<input type="text" placeholder="BUSCAR">
+							<i class="fa fa-search"></i>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -143,9 +147,14 @@
 						</div>
 					</div>
 				</div>
+				<br>
+				<br>
 				<div class="row officialContent">
 					<div class="col-lg-16">
 						<div class="contenedorSlider">
+							<span class="sectionTitle">
+								<p>COLUMNISTAS</p>
+							</span>
 							<div class="columnistas-items">
 								<div>
 									<img src="image/img-columnistas.jpg" alt="">
@@ -244,7 +253,7 @@
 			</div>
 		</div>
 	<!--Contenido dividido. 8S, 4B-->
-		<div class="row officialContent">
+		<div class="row news">
 			<div class="col-lg-8 col-lg-offset-2 contentWide">
 				<h4 class="floatLeft">ÚLTIMAS NOTICIAS</h4>
 				<img class="floatLeft" src="image/double-arrow-bottom.png" alt="">
@@ -332,7 +341,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -419,7 +428,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</i></p>
 						</li>
 					</ul>
 				</div>
@@ -506,7 +515,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -593,7 +602,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -680,7 +689,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -767,7 +776,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -854,7 +863,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
@@ -941,7 +950,7 @@
 							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
 						</li>
 						<li>
-							<p>Fútbol<i class="fa fa-circle"></i></p>
+							<p>Fútbol</p>
 						</li>
 					</ul>
 				</div>
