--- a/contacto.html
+++ b/contacto.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>La República - Contacto</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/dist/bootstrap.css">
 	<link rel="stylesheet" href="css/dist/font-awesome.min.css">
 	<link rel="stylesheet" href="css/dist/slick.css">
