cambios en sidebar

--- a/index.html
+++ b/index.html
@@ -974,13 +974,24 @@
 					</div>
 					<h5 class="center">Más en <a class="link-aweita" href="http://www.aweita.pe">Awita.pe</a></h5>
 					<hr class="barra">
-					</div>
 				</div>
 				<div class="fotos-dest">
 					<div class="foto-big">
 						<div class="titlephots">FOTOS DESTACADAS</div>
-						<img class="img-sidebar" src="image/img_fotodes_prominent.jpg">
+						<img class="img-sidebar big photo" src="image/img_fotodes_prominent.jpg">
 						<p>Líneas de Nasca: admiten prisión preventiva de 6 meses para activista de Greenpeace <span class="sep"></span> FOTOS</p>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_fotodes.jpg">
+						 	<p><b>Uchuraccay: El pueblo quee recibe con flores a quienes llegan a pie <span class="sep"></span> FOTOS</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_fotodes.jpg">
+						 	<p><b>Alianza Lima vs Fénix: íntimos ganaron 1-0 en "Noche Blanquiazul" <span class="sep"></span> VIDEO Y FOTOS</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/TOMAS_BERDYCH.png">
+						 	<p><b>Tomas Berdych derrotó 0-3 a Rafael Ndal y avanzo en el Australian <span class="sep"></span> VIDEO Y FOTOS</b></p>
+						</div>
 					</div>
 				</div>
 			</div>
