diagramacion html faltan 4 secciones

--- a/index.html
+++ b/index.html
@@ -990,8 +990,127 @@
 						</div>
 						<div class="noticia">
 							<img class="pull-left img-sidebar photo" src="image/TOMAS_BERDYCH.png">
-						 	<p><b>Tomas Berdych derrotó 0-3 a Rafael Ndal y avanzo en el Australian <span class="sep"></span> VIDEO Y FOTOS</b></p>
+						 	<p><b>Tomas Berdych derrotó 0-3 a Rafael Nadal y avanzó en el Australian Open<span class="sep"></span> FOTOS</b></p>
 						</div>
+					</div>
+				</div>
+				<div class="fotos-dest">
+					<div class="foto-big">
+						<div class="titlephots">ESPECIALES</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>Régimen laboral juvenil</h4></div>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>COP20</h4></div>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>Concentración de Medios</h4></div>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>Especies peruanas en peligro de extinción</h4></div>
+						</div>
+					</div>
+				</div>
+				<div class="fotos-dest-red">
+					<div class="foto-big">
+						<div class="titlephots">CARLINCATURA DEL DÍA</div>
+						<div class="noticia">
+							<h4>Carlincaturas 30-01-2015</h4>
+							<img class="pull-left img-sidebar photo" src="image/img_carlincatura_sd.jpg">
+						 	<h4>Todas las Carlincaturas</h4>
+						</div>
+					</div>
+				</div>
+				<div class="fotos-dest">
+					<div class="foto-big">
+						<div class="titlephots">BLOG</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>Charlie Hebdo, historia que no debe repetirse</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>El único pulpin es Humala</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>Dios ha muerto... tengo las manos</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>El único pulpin es Humala</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>Charlie Hebdo, historia que no debe repetirse</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>El único pulpin es Humala</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>Dios ha muerto... tengo las manos</b></p>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
+						 	<p><b>El único pulpin es Humala</b></p>
+						</div>
+						<a href="blog.html"><h4>Todos los Blogs</h4></a>
+					</div>
+				</div>
+				<div class="fotos-dest-red">
+					<div class="foto-big">
+						<div class="titlephots">EDICIÓN IMPRESA</div>
+						<h4>La republica - Lima</h4>
+						<img class="pull-left img-sidebar photo" src="image/img_impreso_sd_prominent.jpg">
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_impreso_sd.jpg">
+						 	<div class="bg_white">
+						 		<h4>Extorsionan a menores en colegios</h4>
+						 		<a href="#"><u>La Républica - Norte</u></a>
+						 	</div>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_impreso_sd.jpg">
+						 	<div class="bg_white">
+						 		<h4>El Ojo de Oblitas</h4>
+						 		<a href="#"><u>Domingo</u></a>
+						 	</div>
+						</div>
+					</div>
+				</div>
+				<div class="fotos-dest">
+					<div class="foto-big">
+						<div class="titlephots">ESPECIALES</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>Histórico cierre de Frontera</h4></div>
+						</div>
+						<div class="noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<div class="bg_white"><h4>Evolución de la pobreza e indigencia en América Latina</h4></div>
+						</div>
+					</div>
+				</div>
+				<div class="suscribe bg-sidebar">
+					<div class="bg-white">
+						<img class="mail" src="image/img_pregunta.png" >
+					 	<h3><b>La pregunta de hoy</b></h3>
+					 	<input class="enter-mail" type="text">
+					 	<button class="btn-suscribe" type="submit">Suscribirse</button>
 					</div>
 				</div>
 			</div>
